--- a/homepage.html
+++ b/homepage.html
@@ -2,9 +2,9 @@
 <meta charset="UTF-8">
 <html>
     <head>
-        
+        <link rel="stylesheet" href="homepage.css"/>
     </head>
     <body>
-
+        <img id="vesikalik" src="resim.jpg">
     </body>
 </html>
