--- a/homepage.html
+++ b/homepage.html
@@ -5,6 +5,16 @@
         <link rel="stylesheet" href="homepage.css"/>
     </head>
     <body>
-        <img id="vesikalik" src="resim.jpg">
+        <div id="vesikalik">
+        <img src="foto.svg">
+        </div>
+        <p>My name is Yunus Emre Yağcı.</p>
+        <p>I'm a student at Istanbul Technical University.</p>
+        <p>My faculty is Computer and Informatics and my department is AI and Data Engineering.</p>
+        <p>I'm interested in mathematics and programming.</p>
+        <p>You can access my word prediction game from the button below.</p>
+        <div id="bt">
+            <button onclick="window.location.href='https:/itu-itis24-yagci24.github.io/Term-Project/project.html';"> Word Prediction Game</button>
+        </div>
     </body>
 </html>
