--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,7 @@
         <p>I'm interested in mathematics and programming.</p>
         <p>You can access my word prediction game from the button below.</p>
         <div id="bt">
-            <button onclick="window.location.href='https:/itu-itis24-yagci24.github.io/Term-Project/project.html';"> Word Prediction Game</button>
+            <button onclick="window.location.href='https://itu-itis24-yagci24.github.io/Term-Project/project.html';"> Word Prediction Game</button>
         </div>
     </body>
 </html>
